# FatStd

./: .gitignore  CMakeLists.txt  Makefile  README.md  go.mod  go.sum
cmake/: FatStdConfig.cmake.in
docs/: base64_c_tutorial.md  compress_c_tutorial.md  csv_c_tutorial.md  design.md  design_1.md  design_2.md  design_3.md  documenting_code.md  error_strategy.md  fat_bytes.md  fat_strings.md  http_c_tutorial.md  json_c_tutorial.md  onboarding_and_testing_functions.md  priorities.md  socket_c_tutorial.md  strings_model.md  tiled_c_tutorial.md  working_with_string_arrays.md  xml_c_tutorial.md
include/: getopt.h  raygui.h
include/fat/: base64.h  bytes.h  bytes_buffer.h  bytes_reader.h  bzip2.h  conv.h  csv.h  error.h  export.h  flate.h  go.h  gzip.h  handle.h  http.h  json.h  lzw.h  socket.h  status.h  string.h  string_builder.h  string_reader.h  tar.h  tiled.h  version.h  version_generated.h.in  xml.h  zip.h  zlib.h
pkg/archive/tar/: tar.go
pkg/archive/zip/: zip.go
pkg/compress/bzip2/: bzip2.go
pkg/compress/flate/: flate.go
pkg/compress/gzip/: gzip.go
pkg/compress/lzw/: lzw.go
pkg/compress/zlib/: zlib.go
pkg/encoding/base64/: base64.go
pkg/encoding/csv/: csv.go
pkg/encoding/json/: json.go
pkg/encoding/xml/: xml.go
pkg/fatbytes/: buffer.go  fatbytes.go  reader.go
pkg/fatconv/: fatconv.go
pkg/fatstd_go/: base64_exports.go  bytes_buffer_exports.go  bytes_exports.go  bytes_reader_exports.go  bzip2_exports.go  compress_common.go  conv_exports.go  csv_exports.go  error_exports.go  fatstd_go.go  flate_exports.go  gzip_exports.go  handles.go  http_exports.go  json_exports.go  lzw_exports.go  socket_exports.go  string_exports.go  tar_exports.go  tiled_exports.go  xml_exports.go  zip_exports.go  zlib_exports.go
pkg/fatstrings/: fatstrings.go
pkg/net/httpx/: httpx.go
pkg/net/socket/: socket.go
pkg/tiled/: tiled.go
prompts/: foundation_work.md  work.md
scripts/python_tests/: fatstd_test_support.py  test_fatstd_shared.py
scripts/python_tests/fatstd_tests/: __init__.py  test_base64.py  test_bytes.py  test_bytes_buffer.py  test_bytes_reader.py  test_compress.py  test_conv.py  test_csv.py  test_getopt.py  test_go.py  test_http.py  test_json.py  test_raygui.py  test_raylib.py  test_sdl3.py  test_socket.py  test_string.py  test_string_builder.py  test_string_reader.py  test_tar.py  test_tiled.py  test_version.py  test_xml.py  test_zip.py
src/: fat_base64.c  fat_bytes.c  fat_bytes_buffer.c  fat_bytes_reader.c  fat_bzip2.c  fat_conv.c  fat_csv.c  fat_error.c  fat_flate.c  fat_go.c  fat_gzip.c  fat_http.c  fat_json.c  fat_lzw.c  fat_raygui.c  fat_raylib_link.c  fat_sdl3_link.c  fat_socket.c  fat_string.c  fat_string_builder.c  fat_string_reader.c  fat_tar.c  fat_tiled.c  fat_version.c  fat_xml.c  fat_zip.c  fat_zlib.c  getopt.c
